[package]
name = "lorenz_animate"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "^0.20", features = ["csr"] }
wasm-bindgen = "^0.2.84"
web-sys = { version = "^0.3.61", features=["HtmlFormElement"] }
plotters = { version = "^0.3.4", default_features = false, features = ["line_series"] }
plotters-canvas = "^0.3.0"
plotters-backend = "^0.3.4"
futures = "^0.3.28"

[dev-dependencies]
wasm-bindgen-test = "^0.3"
